WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105875
Back references don't work in pattern attribute
https://bugs.webkit.org/show_bug.cgi?id=105875
Summary
Back references don't work in pattern attribute
Hugh Guiney
Reported
2012-12-30 14:09:50 PST
At the URL provided you will find an imitation datetime input: a text field with a pattern attribute specifying a regular expression that matches most of ISO 8601. It is tested and working in both Firefox and Opera. However, in Safari and Chrome, "2013-01-01" and other valid permutations trigger an invalid status. I am using Cameron Brooks's regex and test cases from
http://underground.infovark.com/2008/07/22/iso-date-validation-regex/#comment-344
to demonstrate the problem.
Attachments
Patch
(5.54 KB, patch)
2013-04-24 22:53 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2013-01-01 03:18:19 PST
This happens due to back references in patterns.
https://code.google.com/p/chromium/issues/detail?id=139971
Kent Tamura
Comment 2
2013-04-24 22:53:37 PDT
Created
attachment 199621
[details]
Patch
Geoffrey Garen
Comment 3
2013-04-24 23:13:09 PDT
Comment on
attachment 199621
[details]
Patch r=me
Kent Tamura
Comment 4
2013-04-24 23:14:46 PDT
Comment on
attachment 199621
[details]
Patch Thanks!
WebKit Commit Bot
Comment 5
2013-04-24 23:40:56 PDT
Comment on
attachment 199621
[details]
Patch Clearing flags on attachment: 199621 Committed
r149093
: <
http://trac.webkit.org/changeset/149093
>
WebKit Commit Bot
Comment 6
2013-04-24 23:40:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug