Back references don't work in pattern attribute https://bugs.webkit.org/show_bug.cgi?id=105875

Reviewed by Geoffrey Garen.

Source/WebCore:

This imports a part of Blink r148951.

Tests: Update fast/forms/ValidityState-patternMismatch.html

* html/BaseTextInputType.cpp:
(WebCore::BaseTextInputType::patternMismatch):
Don't use capturing parentheses. They affected back references in
pattern attribute values.

LayoutTests:

* fast/forms/ValidityState-patternMismatch-expected.txt:
* fast/forms/ValidityState-patternMismatch.html:


Canonical link: https://commits.webkit.org/133590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149093 268f45cc-cd09-0410-ab3c-d52691b4dbfc